--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@reduxjs/toolkit": "^1.5.0",
+    "@screens/forgot-password": "file:./screens/forgot-password/",
     "@screens/user-subscribed": "file:./screens/user-subscribed/",
     "axios": "^0.21.1",
     "react": "17.0.1",
