--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@modules/login": "file:./modules/login/",
+    "@modules/payments": "file:./modules/payments",
     "@modules/splash": "file:./modules/splash/",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
@@ -22,7 +23,9 @@
     "@screens/signup": "file:./screens/signup/",
     "@screens/user-subscribed": "file:./screens/user-subscribed/",
     "@screens/welcome": "file:./screens/welcome/",
+    "@stripe/stripe-react-native": "^0.2.2",
     "axios": "^0.21.1",
+    "babel-plugin-import-glob": "^2.0.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-dotenv": "^2.5.3",
